0.5 unreleased
--------------

Import basic version from a client project